home css  overflow fix

--- a/src/bankai/components/_home.scss
+++ b/src/bankai/components/_home.scss
@@ -3,12 +3,13 @@
 
 .home {
   display: grid;
-  grid-template-columns: repeat(1, auto);
+  grid-template-columns: repeat(1, 100%);
   grid-template-areas:
     " trainer"
     " member"
     "alert  ";
-  padding: 20px;
+  padding: 20px 10px;
+  overflow-x: hidden;
   @include lg {
     grid-template-areas:
       " trainer  member member member member "
